tests/errors/undefined_type.f90
program bspline_stack_size_oo_test
    contains
    subroutine run_test(n)
        implicit none
        integer,intent(in) :: n
        type(bspline_3d) :: s3
    end subroutine run_test
end program bspline_stack_size_oo_test
